fix container overflow on <a> tags

--- a/src/static/static/dangeru.css
+++ b/src/static/static/dangeru.css
@@ -281,6 +281,7 @@ a.footer {
   font-size: 18px;
   display: inline-block;
   text-align: left;
+  word-break: break-all;
 }
 .center {
   text-align: center;
